<resources>
    <string name="app_name">Smart_home</string>
    <string name="Zaloguj">Zaloguj</string>
    <string name="In">Witaj w aplikacji Smart Dom, która pozwoli Ci na zarządzanie swoim obiektem.\n\nDo dyspozycji masz trzy zakładki, za pomocą
        których będziesz mógł sterować oświetleniem, monitorować dane dotyczące obiektu, oraz zmienić ustawienia sieciowe.
    \n\nMiłego użytkowania!</string>
    <string name="Info">Informacje</string>
    <string name="Login">Login</string>
    <string name="Password">Hasło</string>
    <string name="Login_header">Wprowadź login:</string>
    <string name="Password_header">Wprowadź hasło:</string>
    <string name="Temperature_head">Temperatura:</string>
    <string name="Object_stat">Status obiektu:</string>
    <string name="Object_moist">Wilgotność:</string>
    <string name="Button_stat">Status obiektu</string>
    <string name="Button_elect">Energia</string>
    <string name="Button_secur">Alarm</string>
    <string name="L_Kitchen">Lampa - kuchnia</string>
    <string name="L_Hall">Lampa - hol</string>
    <string name="Refresh">Odśwież</string>
    <string name="Socket_Kitchen">Gniazdko - kuchnia</string>
    <string name="Socket_Hall">Gniazdko - hol</string>
    <string name="Options">Ustawienia</string>
    <string name="Save">Zapisz</string>
</resources>
